[gd_scene format=3 uid="uid://bta6ffqd60hxj"]

[ext_resource type="Script" uid="uid://bpnsk2i3dahfx" path="res://scripts/ui/Main.gd" id="1_nha0i"]
[ext_resource type="Texture2D" uid="uid://dru4oksixaa07" path="res://assets/sprites/ui/mesa.png" id="2_1rhdn"]
[ext_resource type="Script" uid="uid://7yuba21mau25" path="res://scripts/core/GameManager.gd" id="2_q24mn"]
[ext_resource type="Texture2D" uid="uid://cy7chbvt6x7u" path="res://assets/sprites/ui/desktop.jpg" id="2_sjxhf"]
[ext_resource type="Texture2D" uid="uid://its17xl65t2b" path="res://assets/sprites/ui/file.png" id="3_ko0rf"]
[ext_resource type="Texture2D" uid="uid://cuh2pdyjccl01" path="res://assets/sprites/ui/phoneRed.png" id="3_q24mn"]
[ext_resource type="PackedScene" uid="uid://cwi5ymf78450o" path="res://scenes/main/MaskPanel.tscn" id="4_1rhdn"]
[ext_resource type="PackedScene" uid="uid://c5nr3j33o4vg6" path="res://scenes/main/clock.tscn" id="4_dc040"]
[ext_resource type="Texture2D" uid="uid://qfvp1lvd82sn" path="res://assets/sprites/ui/phoneBlue.png" id="4_gyg6b"]
[ext_resource type="Texture2D" uid="uid://b7dcnqyktrq32" path="res://assets/sprites/ui/eagles.png" id="6_ostsq"]
[ext_resource type="Texture2D" uid="uid://bacryx6fivq0x" path="res://assets/sprites/ui/rebellion_logo.png" id="9_3km4f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ko0rf"]
texture = ExtResource("2_sjxhf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkm1d"]
bg_color = Color(0.21568628, 0.0627451, 0.06666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5fgu"]
bg_color = Color(0.6745098, 0.17254902, 0.13725491, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tpxt"]
bg_color = Color(0.07058824, 0.09803922, 0.17254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsdfw"]
bg_color = Color(0.24313726, 0.44313726, 0.6627451, 1)
[ext_resource type="Texture2D" uid="uid://b7dcnqyktrq32" path="res://assets/sprites/ui/eagles.png" id="4_sjxhf"]
[ext_resource type="AudioStream" uid="uid://cs2v7x1x7k6xq" path="res://assets/audio/phone_ring.wav" id="5_ring"]
[ext_resource type="AudioStream" uid="uid://d5gk4t4v0m7xk" path="res://assets/audio/phone_pickup.mp3" id="6_pickup"]
[ext_resource type="AudioStream" uid="uid://d1gn3g6b4m2m0" path="res://assets/audio/phone_hangup.wav" id="7_hangup"]
[ext_resource type="AudioStream" uid="uid://b30n4r8b1kq7m" path="res://assets/audio/ui_click.wav" id="8_click"]
[ext_resource type="AudioStream" uid="uid://c1m7v4b1y0t0q" path="res://assets/audio/ambience_office.mp3" id="9_ambience"]
[ext_resource type="AudioStream" uid="uid://b1p7xk1t0r7tq" path="res://assets/audio/paper1.wav" id="10_paper_info"]
[ext_resource type="AudioStream" uid="uid://c8r6p0n4k6y2m" path="res://assets/audio/paper2.wav" id="11_paper_sell"]
[ext_resource type="AudioStream" uid="uid://d8g4y1m5q3r2t" path="res://assets/audio/radio_static.wav" id="12_static"]

[node name="Main" type="Control" unique_id=1647585048]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nha0i")

[node name="Panel" type="Panel" parent="." unique_id=1379793488]
[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1970509411]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer" unique_id=1560707409]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CenterContainer" unique_id=1070441115]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
texture = ExtResource("2_1rhdn")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CenterContainer" unique_id=1246679314]
custom_minimum_size = Vector2(450, 450)
layout_mode = 2
texture = ExtResource("3_ko0rf")
expand_mode = 1
stretch_mode = 5

[node name="ColorRect2" type="ColorRect" parent="CenterContainer" unique_id=553784703]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
color = Color(0, 0, 0, 0.1254902)

[node name="GameManager" type="Node" parent="." unique_id=1237323366]
script = ExtResource("2_q24mn")

[node name="SfxRing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ring")
volume_db = 0.0

[node name="SfxPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pickup")
volume_db = -8.0

[node name="SfxHangup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hangup")
volume_db = -8.0

[node name="SfxClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_click")
volume_db = 0.0

[node name="SfxAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ambience")
volume_db = -12.0
autoplay = true

[node name="SfxPaperInfo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_paper_info")
volume_db = 0.0

[node name="SfxPaperSell" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_paper_sell")
volume_db = 0.0

[node name="SfxStatic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_static")
volume_db = -6.0

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=180341695]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ko0rf")

[node name="GameManager" type="Node" parent="." unique_id=1237323366]
script = ExtResource("2_q24mn")

[node name="LeftPanel" type="Control" parent="." unique_id=401810459]
layout_mode = 1
anchor_right = 0.33
anchor_bottom = 1.0
metadata/_edit_lock_ = true

[node name="MaskPanel" parent="LeftPanel" unique_id=1258673724 instance=ExtResource("4_1rhdn")]
layout_mode = 1
anchor_left = 0.1467803
anchor_top = 0.62083334
anchor_right = 0.89498097
anchor_bottom = 0.9597222
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="PhoneRed" type="TextureButton" parent="LeftPanel" unique_id=1661207811]
custom_minimum_size = Vector2(300, 289.225)
layout_mode = 0
offset_left = 50.0
offset_top = 80.0
offset_right = 350.0
offset_bottom = 369.225
texture_normal = ExtResource("3_q24mn")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="LeftPanel" unique_id=1337661153]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.11100001
offset_top = 10.0
offset_bottom = 10.079994
theme_override_constants/separation = 155
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1724329661]
layout_mode = 2
theme_override_constants/separation = 290
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="LeftPanel/HBoxContainer" unique_id=1368389031]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("6_ostsq")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanel/HBoxContainer" unique_id=1030809288]
[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer" unique_id=1199853700]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer" unique_id=1491206646]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("4_sjxhf")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer" unique_id=63828800]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1216970117]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Sospecha"
horizontal_alignment = 1

[node name="SuspicionBarRed" type="ProgressBar" parent="HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1883222905]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="LeftPanel/HBoxContainer/VBoxContainer" unique_id=1059177022]
layout_mode = 2
text = "SOSPECHA IMPERIO"
[node name="PhoneRed" type="TextureButton" parent="HBoxContainer/VBoxContainer/VBoxContainer" unique_id=1661207811]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_q24mn")
ignore_texture_size = true
stretch_mode = 5

[node name="SuspicionBarRed" type="ProgressBar" parent="LeftPanel/HBoxContainer/VBoxContainer" unique_id=1883222905]
custom_minimum_size = Vector2(300, 30.545)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_qkm1d")
theme_override_styles/fill = SubResource("StyleBoxFlat_p5fgu")
value = 60.13

[node name="CenterPanel" type="Control" parent="." unique_id=1570302036]
layout_mode = 1
anchor_left = 0.33
anchor_right = 0.66
anchor_bottom = 1.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterPanel" unique_id=1196110266]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -3.0517578e-05
offset_bottom = 157.24
grow_horizontal = 2
alignment = 1
[node name="Clock" parent="HBoxContainer/VBoxContainer2" unique_id=262250937 instance=ExtResource("4_dc040")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Clock2" parent="CenterPanel/HBoxContainer" unique_id=262250937 instance=ExtResource("4_dc040")]
custom_minimum_size = Vector2(211.305, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterPanel" unique_id=1249635887]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14109842
anchor_top = 0.275
anchor_right = 0.919981
anchor_bottom = 0.73194444
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ko0rf")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TurnLabel" type="Label" parent="CenterPanel" unique_id=1244122947]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Turno:"
horizontal_alignment = 1

[node name="EventPanel" type="PanelContainer" parent="CenterPanel" unique_id=389366397]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.345
offset_top = -23.0
offset_right = 154.92502
grow_horizontal = 2
grow_vertical = 2

[node name="EventText" type="Label" parent="CenterPanel/EventPanel" unique_id=1933662527]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
autowrap_mode = 2

[node name="RightPanel" type="Control" parent="." unique_id=1345644869]
layout_mode = 1
anchor_left = 0.66
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MoneyLabel" type="Label" parent="RightPanel" unique_id=1812038768]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
text = "ðŸ’° dinero: "

[node name="PhoneBlue" type="TextureButton" parent="RightPanel" unique_id=215396894]
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
anchor_top = 0.15171528
anchor_right = 0.6893383
anchor_bottom = 0.5683819
texture_normal = ExtResource("4_gyg6b")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="RightPanel" unique_id=1031655484]
layout_mode = 0
offset_top = 10.0
offset_right = 384.0
offset_bottom = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="RightPanel/HBoxContainer" unique_id=451824176]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Label" type="Label" parent="RightPanel/HBoxContainer/VBoxContainer" unique_id=1101596141]
layout_mode = 2
text = "SOSPECHA RESISTENCIA"

[node name="SuspicionBarBlue" type="ProgressBar" parent="RightPanel/HBoxContainer/VBoxContainer" unique_id=61183635]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_2tpxt")
theme_override_styles/fill = SubResource("StyleBoxFlat_jsdfw")
value = 50.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="RightPanel/HBoxContainer" unique_id=1341959525]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("9_3km4f")
expand_mode = 1

[connection signal="pressed" from="LeftPanel/PhoneRed" to="." method="_on_phone_red_pressed"]
[connection signal="pressed" from="RightPanel/PhoneBlue" to="." method="_on_phone_blue_pressed"]
